trunk/Archive2/75/096fdd30f1da01/output
main.cpp: In member function 'void Derived<M>::bar()':
main.cpp:7:22: error: there are no arguments to 'foo' that depend on a template parameter, so a declaration of 'foo' must be available [-fpermissive]
     void bar() { foo(); }
                      ^
main.cpp:7:22: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
