trunk/Archive2/75/096fdd30f1da01/main.cpp

template <int M>
struct Base { void foo() {} };

template <int M>
struct Derived : public Base<M> {
    void bar() { foo(); }
};
